--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,11 @@
+
+volumes:
+  postgres_data:
+
+networks:
+  grafanahep:
+    driver: bridge
+
 services:
   postgres:
     image: postgres:13
@@ -8,16 +16,16 @@ services:
       POSTGRES_DB: container
     ports:
       - "5432:5432"
+    networks:
+      - grafanahep
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  
-  nodeapp:
-    build: .
-    container_name: node-container
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
     ports:
       - "3000:3000"
-    depends_on:
-      - postgres
-
-volumes:
-  postgres_data:
+    networks:
+      - grafanahep
+  
