--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sendhepinfotografana",
   "version": "1.0.0",
   "main": "client.js",
-  
+  "type": "module",
   "scripts": {
-    "start": "node client.js",
+    "start": "node client/index.js",
     "startServer": "node Server/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
